# forte-k8s-workshop

./: .gitignore  README.md  shared-ids.md
.github/workflows/: docker-build-push.yml
01 - TeamGenerator/: .dockerignore  Dockerfile  README.md  TeamGenerator.sln
01 - TeamGenerator/deploy/: 02-deployment.yaml  03-service.yaml  namespace.yaml
02 - BettingService/: .dockerignore  .gitignore  Dockerfile  README.md  main.py
03 - MatchScheduler/: .dockerignore  .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
04 - StatsAggregator/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.broken  README.md
04 - StatsAggregator/deploy/: 01-namespace.yaml  deployment.yaml  service.yaml
04 - StatsAggregator/helm-chart/: Chart.yaml  values.yaml
04 - StatsAggregator/helm-chart/templates/: _helpers.tpl  deployment.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
04 - StatsAggregator/src/: generator.rs  handlers.rs  main.rs  models.rs
05 - NotificationCenter/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
06 - Frontend/: .env.example  .gitignore  Dockerfile  HEALTH_ENDPOINTS_SOLUTION.md  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
07 - MatchEventLogger/: Dockerfile  README.md  main.py
helm-charts/: COMPARISON.md  README.md  examples.sh
session3/: EXERCISES-PART1-CONFIGMAPS.md  EXERCISES-PART2-SECRETS.md  EXERCISES-PART3-VOLUMES-AND-CHALLENGE.md  SETUP.md  kind-config-windows.yaml  kind-config.yaml
tests/: README.md  shared-id-consistency.py
(+159 files in other folders)
